--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -1,8 +1,18 @@
+$dark-color: #222222
+$light-color: #494949
+$main-color: #f9236f
+$gradient-color: #f92347
+$counter-color: #bae9ff
+
 body
   margin: 0
   font-family: 'Montserrat', sans-serif
   font-weight: 500
   font-size: 10px
+
+h1
+  margin: 0
+  font-weight: 800
 
 p
   margin: 0
@@ -22,6 +32,14 @@ a
   color: inherit
   font-size: inherit
 
+.button
+  color: white
+  font-weight: 900
+  background: linear-gradient(90deg, $main-color, $gradient-color)
+  font-size: 2em
+  border: none
+  padding: 10px 25px
+
 .unselectable
   -webkit-touch-callout: none
   -webkit-user-select: none
@@ -29,6 +47,9 @@ a
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
+
+.main-colored
+  color: $main-color
 
 .wrapper
   width: 1170px
@@ -40,8 +61,9 @@ a
   position: fixed
   top: 0
   width: 100%
+  color: $dark-color
   &__line
-    height: 58px
+    height: 60px
     display: flex
     justify-content: space-between
     align-items: center
@@ -87,3 +109,34 @@ a
     height: 20px
     background-color: black
     cursor: pointer
+
+.section-welcome
+  height: calc( 100vh + 120px )
+  background-color: $counter-color
+  &__wrapper
+    padding-top: 120px
+    height: calc( 100% - 240px )
+    display: flex
+    align-items: center
+  &__content
+    text-align: center
+    width: 680px
+  &__label
+    text-transform: uppercase
+    color: $dark-color
+    margin-bottom: 30px
+    &-item
+      display: block
+      height: min-content
+      font-size: 8em
+      letter-spacing: -0.05em
+      line-height: 73%
+    &-year
+      padding-top: 7px
+      font-size: 3.5em
+      letter-spacing: 6rem
+      text-indent: 6.5rem
+  &__text
+    color: $light-color
+    line-height: 1.5
+    margin-bottom: 50px
