--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -1,142 +1,4 @@
-$dark-color: #222222
-$light-color: #494949
-$main-color: #f9236f
-$gradient-color: #f92347
-$counter-color: #bae9ff
-
-body
-  margin: 0
-  font-family: 'Montserrat', sans-serif
-  font-weight: 500
-  font-size: 10px
-
-h1
-  margin: 0
-  font-weight: 800
-
-p
-  margin: 0
-  font-size: 1.6em
-
-ul
-  margin: 0
-  padding: 0
-  font-size: 1.6em
-
-li
-  list-style: none
-  font-size: inherit
-
-a
-  text-decoration: none
-  color: inherit
-  font-size: inherit
-
-.button
-  color: white
-  font-weight: 900
-  background: linear-gradient(90deg, $main-color, $gradient-color)
-  font-size: 2em
-  border: none
-  padding: 10px 25px
-
-.unselectable
-  -webkit-touch-callout: none
-  -webkit-user-select: none
-  -khtml-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-
-.main-colored
-  color: $main-color
-
-.wrapper
-  width: 1170px
-  margin-left: auto
-  margin-right: auto
-
-.header
-  background-color: rgba(255, 255, 255, 0.5)
-  position: fixed
-  top: 0
-  width: 100%
-  color: $dark-color
-  &__line
-    height: 60px
-    display: flex
-    justify-content: space-between
-    align-items: center
-    position: relative
-    &:first-child::after
-      content: ""
-      display: block
-      height: 1px
-      width: 100%
-      background-color: black
-      opacity: 0.62
-      position: absolute
-      bottom: 0
-  &__info
-    display: flex
-    align-items: center
-    column-gap: 80px
-  &__mailto
-    font-weight: 700
-  &__switches
-    font-weight: 800
-    display: flex
-    align-items: center
-    column-gap: 20px
-  &__lang
-    cursor: pointer
-  &__currency
-    cursor: pointer
-  &__logo
-    font-weight: 800
-    font-size: 2.6em
-  &__nav
-    display: flex
-    align-items: center
-    column-gap: 30px
-  &__nav-list
-    display: flex
-    align-items: center
-    column-gap: 20px
-    font-weight: 700
-  &__icon
-    width: 20px
-    height: 20px
-    background-color: black
-    cursor: pointer
-
-.section-welcome
-  height: calc( 100vh + 120px )
-  background: url("../../assets/images/face.png") no-repeat right 0 top 120px / contain, top / cover no-repeat url("../../assets/images/particles.png"), $counter-color
-  &__wrapper
-    padding-top: 120px
-    height: calc( 100% - 240px )
-    display: flex
-    align-items: center
-  &__content
-    text-align: center
-    width: 680px
-  &__label
-    text-transform: uppercase
-    color: $dark-color
-    margin-bottom: 30px
-    &-item
-      display: block
-      height: min-content
-      font-size: 8em
-      letter-spacing: -0.05em
-      line-height: 73%
-    &-year
-      padding-top: 7px
-      font-size: 3.5em
-      letter-spacing: 6rem
-      text-indent: 6.5rem
-  &__text
-    color: $light-color
-    line-height: 1.5
-    margin-bottom: 50px
+@import foundation/colors
+@import foundation/general
+@import components/header
+@import sections/section-welcome
