--- a/styles/sass/components/_header.sass
+++ b/styles/sass/components/_header.sass
@@ -49,5 +49,11 @@
   &__icon
     width: 20px
     height: 20px
-    background-color: black
     cursor: pointer
+    background-size: contain
+  &__search
+    background-image: url("../../assets/images/svg/search.svg")
+  &__cart
+    background-image: url("../../assets/images/svg/cart.svg")
+  &__popup
+    background-image: url("../../assets/images/svg/menu.svg")
