switching .PNGs to .WEBPs

--- a/styles/sass/sections/_section-welcome.sass
+++ b/styles/sass/sections/_section-welcome.sass
@@ -1,6 +1,6 @@
 .section-welcome
   height: calc( 100vh + 120px )
-  background: url("../../assets/images/face.png") no-repeat right 0 top 120px / contain, top / cover no-repeat url("../../assets/images/particles.png"), $counter-color
+  background: url("../../assets/images/webp/face.webp") no-repeat right 0 top 120px / contain, top / cover no-repeat url("../../assets/images/webp/particles.webp"), $counter-color
   &__wrapper
     padding-top: 120px
     height: calc( 100% - 240px )
