--- a/styles/sass/foundation/_colors.sass
+++ b/styles/sass/foundation/_colors.sass
@@ -1,5 +1,6 @@
 $dark-color: #222222
 $light-color: #494949
+$lighter-color: #f1f1f1
 $main-color: #f9236f
 $gradient-color: #f92347
 $counter-color: #bae9ff
