--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -2,5 +2,6 @@
 @import foundation/colors
 @import foundation/general
 @import components/header
+@import components/banner
 @import sections/section-welcome
 @import sections/section-market
