--- a/styles/sass/sections/_section-market.sass
+++ b/styles/sass/sections/_section-market.sass
@@ -18,11 +18,11 @@
     margin-top: 60px
     display: flex
     justify-content: space-around
+    margin-bottom: 100px
   &__top-bar-item
     width: 230px
     height: 65px
     max-height: 65px
-    overflow: hidden
     text-align: center
     position: relative
     &::before
@@ -51,6 +51,12 @@
     font-size: 3em
     font-weight: 900
     margin-bottom: 10px
+    height: 36px
+    overflow: hidden
   &__top-bar-item-text
     font-size: 1.6em
     font-weight: 500
+    height: 20px
+    overflow: hidden
+  &__banners
+    display: flex
