market sections banners

--- a/styles/sass/sections/_section-market.sass
+++ b/styles/sass/sections/_section-market.sass
@@ -60,3 +60,12 @@
     overflow: hidden
   &__banners
     display: flex
+    column-gap: 40px
+    margin-left: 30px
+    margin-right: 30px
+  &__banner
+    flex-grow: 1
+  &__banner-1
+    background: url(../../assets/images/webp/banner-image-1.webp) no-repeat top 0 left 170px, $counter-color-light
+  &__banner-2
+    background: url(../../assets/images/webp/banner-image-2.webp) no-repeat top 0 left 170px, $counter-color-light
