--- a/styles/sass/components/_banner.sass
+++ b/styles/sass/components/_banner.sass
@@ -14,6 +14,7 @@
     letter-spacing: -2px
     margin-bottom: 15px
     max-height: 82px
+    padding-top: 3px
     overflow: hidden
   &__text
     font-size: 1.6em
