product component styles

--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -3,5 +3,6 @@
 @import foundation/general
 @import components/header
 @import components/banner
+@import components/product
 @import sections/section-welcome
 @import sections/section-market
