--- a/styles/sass/sections/_section-market.sass
+++ b/styles/sass/sections/_section-market.sass
@@ -63,9 +63,29 @@
     column-gap: 40px
     margin-left: 30px
     margin-right: 30px
+    margin-bottom: 100px
   &__banner
     flex-grow: 1
   &__banner-1
     background: url(../../assets/images/webp/banner-image-1.webp) no-repeat top 0 left 170px, $counter-color-light
   &__banner-2
     background: url(../../assets/images/webp/banner-image-2.webp) no-repeat top 0 left 170px, $counter-color-light
+  &__featured
+    text-align: center
+  &__featured-label
+    font-weight: 900
+    font-size: 2.6em
+    text-transform: uppercase
+    margin-bottom: 10px
+    height: 32px
+    overflow: hidden
+  &__featured-text
+    font-weight: 500
+    font-size: 1.6em
+    margin-bottom: 20px
+    height: 20px
+    overflow: hidden
+  &__featured-slider
+    margin-bottom: 40px
+    margin-left: 30px
+    margin-right: 30px
