--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -4,5 +4,6 @@
 @import components/header
 @import components/banner
 @import components/product
+@import components/slider
 @import sections/section-welcome
 @import sections/section-market
