news section & news card component

--- a/styles/sass/index.sass
+++ b/styles/sass/index.sass
@@ -5,5 +5,7 @@
 @import components/banner
 @import components/product
 @import components/slider
+@import components/news-card
 @import sections/section-welcome
 @import sections/section-market
+@import sections/section-news
