--- a/styles/sass/components/_slider.sass
+++ b/styles/sass/components/_slider.sass
@@ -19,7 +19,7 @@
   &__nav-item
     height: 20px
     width: 20px
-    background-color: $lighter-color
+    background-color: $gray
     border-radius: 50%
     background-position: center
     background-repeat: no-repeat
