--- a/styles/sass/components/_product.sass
+++ b/styles/sass/components/_product.sass
@@ -7,6 +7,12 @@
     &_size_small
       height: 100px
       width: 90px
+      position: absolute
+      left: 0
+      top: 0
+      bottom: 0
+      margin-top: auto
+      margin-bottom: auto
   &__image
     object-fit: cover
     object-position: center
@@ -20,12 +26,19 @@
     font-weight: 500
     &_margin-bottom_15
       margin-bottom: 15px
+    &_margin-bottom_5
+      margin-bottom: 5px
+    &_style_light
+      font-style: italic
+      color: $gray
   &__rating
     display: inline-flex
     column-gap: 3px
     height: 15px
     &_margin-bottom_10
       margin-bottom: 10px
+    &_margin-bottom_15
+      margin-bottom: 15px
   &__star
     height: 15px
     width: 15px
@@ -37,6 +50,8 @@
   &__price
     font-size: 1.8em
     font-weight: 900
+    &_color_main
+      color: $main-color
     &-old
       color: $light-color
       font-size: 16px
@@ -46,4 +61,9 @@
     text-align: center
     padding-bottom: 25px
   &_size_small
+    height: 100px
+    padding-top: 20px
+    padding-bottom: 20px
+    padding-left: 110px
     text-align: left
+    position: relative
